se crearon las ventanas emergentes de la pagina users

--- a/gestionUsuarios.html
+++ b/gestionUsuarios.html
@@ -50,9 +50,9 @@
     <nav id="mySidebar" class="sidebar">
       <span class=sidebar-content>
         <ul>
-          <li>
+          <!-- <li>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-          </li>
+          </li> -->
           <li>
             <a href="#">
               <span class="icon">
@@ -315,7 +315,8 @@
           </div>
           <div>
             <input class="btnEditar" type="submit" name="botonEditar" value="Editar Comentario" />
-            <h4><strong><a href="#">Borrar Comentario</a></strong></h4>
+            <input class="btnEliminar" type="submit" name="botonEliminar" value="Borrar Comentario" />
+            <!-- <h4><strong><a href="#">Borrar Comentario</a></strong></h4> -->
           </div>
         </div>
       </div>
