algunos cambios a las vistas

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 
     <!-- SECCION PRINCIPAL DE CONTENIDO -->
-    <div id="main">
+    <div id="main" marginLeft="5rem">
       <div class="base-main">
         <!-- GALERIA DE IMAGENES -->
 
