--- a/nosotros.html
+++ b/nosotros.html
@@ -1,13 +1,467 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre Nosotros</title>
-  </head>
-  <body>
-    <h2>Sobre Nosotros</h2>
-    <a href="index.html">Home</a>
-  </body>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/nosotros.css" />
+  <!-- <link rel="stylesheet" href="css/index.css" /> -->
+  <!-- <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+    /> -->
+  <!-- FONTAWESOME OK -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <title>Hotel Rose Ryhaan by Rotana</title>
+</head>
+
+<body>
+  <div class="container">
+    <!-- SIDEBAR note: sidebar == navigation-->
+    <header class="topbar">
+      <!-- FIXME incluir boton de open del sidebar dentro, y aumentar el width para que se vean solamente los iconos del sidebar -->
+      <!-- SIDEBAR - BOTON OPEN -->
+      <div class="toggle">
+        <!-- <button class="openbtn" onclick="openNav()">☰</button> -->
+        <button class="openbtn" onclick="openOrClose(value)" value="0" id="openbtn">☰</button>
+      </div>
+      <div class="logo-top">
+        <a href="index.html">
+          <img src="img/svg/logo-ryhaan_dubai.svg" alt="Rose Ryhaan Dubai" height="35" />
+        </a>
+      </div>
+      <!-- search bar right align -->
+      <div class="search">
+        <form action="#">
+          <input type="text" placeholder="Buscar" name="search" />
+          <button type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
+      </div>
+      <!--agregar login-->
+    </header>
+
+    <nav id="mySidebar" class="sidebar">
+      <span class=sidebar-content>
+        <ul>
+          <!-- <li>
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+          </li> -->
+          <li>
+            <a href="#">
+              <span class="icon">
+                <img src="img/svg/logo-ryhaan.svg" alt="Logo-Ryhaan" />
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html">
+              <span class="icon"><img src="img/svg/fa/bell-concierge-solid.svg" alt="concierge bell icon" width="50" />
+              </span>
+              <span class="title">Inicio</span>
+            </a>
+          </li>
+          <li>
+            <a href="habitaciones.html">
+              <span class="icon">
+                <img src="img/svg/fa/bed-solid.svg" alt="bed icon" width="50" />
+              </span>
+              <span class="title">Habitaciones</span>
+            </a>
+          </li>
+          <li>
+            <a href="reservas.html">
+              <span class="icon">
+                <img src="img/svg/fa/book-solid.svg" alt="booking icon" width="50" />
+              </span>
+              <span class="title">Reservas</span>
+            </a>
+          </li>
+          <li>
+            <a href="contacto.html">
+              <span class="icon"><img src="img/svg/fa/phone-solid.svg" alt="phone icon" width="50" /></span>
+              <span class="title">Contacto</span>
+            </a>
+          </li>
+          <li>
+            <a href="nosotros.html">
+              <span class="icon"><img src="img/svg/fa/id-badge-solid.svg" alt="id-card icon" width="50" /></span>
+              <span class="title">Sobre Nosotros</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="icon"><img src="img/img-users/user.svg" alt="Foto Usuario" width="75"></span>
+              <span class="title" onclick="document.getElementById('modal-id01').style.display='block'"
+                data-open="modal-id01">Usuario</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="icon"><img src="img/svg/fa/right-to-bracket-solid.svg" alt="id-card icon"
+                  onclick="document.getElementById('modal-id01').style.display='block'" data-open="modal-id01"></span>
+              <span class="title" onclick="document.getElementById('modal-id01').style.display='block'"
+                data-open="modal-id01">Iniciar
+                Sesión</span>
+              <!-- <button type="button" class="open-modal" data-open="modal-id01">boton</button> -->
+            </a>
+          </li>
+        </ul>
+      </span>
+    </nav>
+
+
+    <!-- MODAL LOGIN BOX -->
+    <div id="modal-id01" class="modal">
+      <form class="modal-content animate" action="/action_page.php">
+        <div class="modal-container">
+          <label>
+            <h1>Login</h1>
+          </label>
+          <label><b>Usuario</b></label>
+          <input type="text" placeholder="Nombre de Usuario" name="uname" required />
+
+          <label><b>Contraseña</b></label>
+          <input type="password" placeholder="Contraseña" name="psw" required />
+          <input type="checkbox" checked="checked" /> Recordarme
+        </div>
+
+        <div class="modal-container-button">
+          <div>
+            <button type="submit" class="modal-confirmbtn">
+              Confirmar
+              <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+          <div>
+            <button type="button" onclick="document.getElementById('modal-id01').style.display='none'"
+              class="modal-cancelbtn">
+              Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+        </div>
+        <span class="modal-psw"><a href="#">¿Ha olvidado su Contraseña?</a></span>
+        <span class="modal-psw"><a href="#">¿Eres Nuevo Usuario?</a></span>
+      </form>
+    </div>
+    <!-- END MODAL BOX -->
+
+    <!-- MODAL DESCRIPTION AND VALUE EDITION -->
+    <div id="modal-id02" class="modal">
+      <form class="modal-content animate" action="/action_page.php">
+        <div class="modal-container">
+          <label>
+            <h1>Edición de Descripción y Valor de las Habitaciones</h1>
+          </label>
+          <label><b>Valor de las Habitaciones</b></label>
+          <input type="number" class="campo-modal" min="1" />
+
+          <!-- <label><b>Fecha</b></label>
+          <input type="date" class="campo-modal" disabled /> -->
+
+          <label><b>Descripción</b></label>
+          <textarea class="campo-modal" placeholder="Comentario" maxlength="630" cols="30" rows="10"></textarea>
+          <!-- <input type="text" placeholder="Comentario" /> -->
+
+          <!-- <input type="checkbox" checked="checked" /> Recordarme -->
+        </div>
+
+        <div class="modal-container-button">
+          <div>
+            <button type="submit" class="modal-confirmbtn">
+              Confirmar
+              <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+          <div>
+            <button type="button" onclick="document.getElementById('modal-id02').style.display='none'"
+              class="modal-cancelbtn">
+              Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+        </div>
+        <!-- <span class="modal-psw"><a href="#">¿Ha olvidado su Contraseña?</a></span>
+    <span class="modal-psw"><a href="#">¿Eres Nuevo Usuario?</a></span> -->
+      </form>
+    </div>
+    <!-- END MODAL DESCRIPTION AND VALUE EDITION -->
+
+    <!-- MODAL DELETE REVIEW -->
+    <div id="modal-id03" class="modal">
+      <form class="modal-content animate" action="/action_page.php">
+        <div class="modal-container">
+          <label>
+            <h1>Eliminar Comentario?</h1>
+          </label>
+          <label><b>ID del Comentario</b></label>
+          <input type="text" disabled />
+
+          <label><b>Fecha</b></label>
+          <input type="date" class="campo-modal" disabled />
+
+          <label><b>Comentario</b></label>
+          <textarea class="campo-modal" placeholder="Comentario" maxlength="630" cols="30" rows="10"
+            disabled></textarea>
+          <!-- <input type="text" placeholder="Comentario" /> -->
+
+          <!-- <input type="checkbox" checked="checked" /> Recordarme -->
+        </div>
+
+        <div class="modal-container-button">
+          <div>
+            <button type="submit" class="modal-confirmbtn">
+              Confirmar
+              <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+          <div>
+            <button type="button" onclick="document.getElementById('modal-id03').style.display='none'"
+              class="modal-cancelbtn">
+              Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+        </div>
+        <!-- <span class="modal-psw"><a href="#">¿Ha olvidado su Contraseña?</a></span>
+    <span class="modal-psw"><a href="#">¿Eres Nuevo Usuario?</a></span> -->
+      </form>
+    </div>
+    <!-- END MODAL DELETE REVIEW -->
+
+    <!-- MODAL SAVE DATA-ROOMS -->
+    <div id="modal-id04" class="modal">
+      <form class="modal-content animate" action="/action_page.php">
+        <div class="modal-container">
+          <label>
+            <h2>¿Desea guardar las modificaciones realizadas en los datos de las habitaciones?</h2>
+          </label>
+          <!-- <label><b>ID del Comentario</b></label>
+      <input type="text" disabled/>
+
+      <label><b>Fecha</b></label>
+      <input type="date" class="campo-modal" disabled/>
+
+      <label><b>Comentario</b></label>
+      <textarea class="campo-modal" placeholder="Comentario" 
+      maxlength="630" cols="30" rows="10" disabled></textarea> -->
+          <!-- <input type="text" placeholder="Comentario" /> -->
+
+          <!-- <input type="checkbox" checked="checked" /> Recordarme -->
+        </div>
+
+        <div class="modal-container-button">
+          <div>
+            <button type="submit" class="modal-confirmbtn">
+              Confirmar
+              <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+          <div>
+            <button type="button" onclick="document.getElementById('modal-id04').style.display='none'"
+              class="modal-cancelbtn">
+              Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+        </div>
+        <!-- <span class="modal-psw"><a href="#">¿Ha olvidado su Contraseña?</a></span>
+    <span class="modal-psw"><a href="#">¿Eres Nuevo Usuario?</a></span> -->
+      </form>
+    </div>
+    <!-- END MODAL SAVE DATA-ROOMS -->
+
+    <!-- MODAL ADDING ROOM -->
+    <div id="modal-id05" class="modal">
+      <form class="modal-content animate" action="/action_page.php">
+        <div class="modal-container">
+          <label>
+            <h1>¿Cuántas habitaciones nuevas de tipo Estándar se van a crear?</h1>
+          </label>
+          <label><b>Valor de las Habitaciones</b></label>
+          <input type="number" class="campo-modal" min="1" />
+
+          <!-- <label><b>Fecha</b></label>
+          <input type="date" class="campo-modal" disabled /> -->
+
+          <!-- <label><b>Descripción</b></label>
+          <textarea class="campo-modal" placeholder="Comentario" maxlength="630" cols="30"
+            rows="10"></textarea> -->
+          <!-- <input type="text" placeholder="Comentario" /> -->
+
+          <!-- <input type="checkbox" checked="checked" /> Recordarme -->
+        </div>
+
+        <div class="modal-container-button">
+          <div>
+            <button type="submit" class="modal-confirmbtn">
+              Confirmar
+              <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+          <div>
+            <button type="button" onclick="document.getElementById('modal-id05').style.display='none'"
+              class="modal-cancelbtn">
+              Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+        </div>
+        <!-- <span class="modal-psw"><a href="#">¿Ha olvidado su Contraseña?</a></span>
+    <span class="modal-psw"><a href="#">¿Eres Nuevo Usuario?</a></span> -->
+      </form>
+    </div>
+    <!-- ADDING ROOM -->
+
+    <!-- MODAL DELETE ROOMS -->
+    <div id="modal-id06" class="modal">
+      <form class="modal-content animate" action="/action_page.php">
+        <div class="modal-container">
+          <label>
+            <h2>¿Desea eliminar las habitaciones seleccionadas?</h2>
+            <h5> Una vez confirme no se podrán rehacer los cambios.</h5>
+          </label>
+          <!-- <label><b>ID del Comentario</b></label>
+      <input type="text" disabled/>
+
+      <label><b>Fecha</b></label>
+      <input type="date" class="campo-modal" disabled/>
+
+      <label><b>Comentario</b></label>
+      <textarea class="campo-modal" placeholder="Comentario" 
+      maxlength="630" cols="30" rows="10" disabled></textarea> -->
+          <!-- <input type="text" placeholder="Comentario" /> -->
+
+          <!-- <input type="checkbox" checked="checked" /> Recordarme -->
+        </div>
+
+        <div class="modal-container-button">
+          <div>
+            <button type="submit" class="modal-confirmbtn">
+              Confirmar
+              <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+          <div>
+            <button type="button" onclick="document.getElementById('modal-id06').style.display='none'"
+              class="modal-cancelbtn">
+              Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+            </button>
+          </div>
+        </div>
+        <!-- <span class="modal-psw"><a href="#">¿Ha olvidado su Contraseña?</a></span>
+    <span class="modal-psw"><a href="#">¿Eres Nuevo Usuario?</a></span> -->
+      </form>
+    </div>
+    <!-- END MODAL DELETE ROOMS -->
+
+    <!-- SECCION PRINCIPAL -->
+    <div class="main" id="main">
+      <div class="base-main">
+        <!-- AREA PRINCIPAL -->
+        <div class="information">
+          <h3>Rose Rayhaan</h3>
+          <div class="text">
+            
+            <p>
+              El Rose Rayhaan by Rotana está situado en la carretera Sheikh
+              Zayed, a 3 minutos del Centro Financiero Internacional de Dubái
+              (DIFC) y a un paso de la estación de metro Financial Centre.
+              También se proporciona recepción 24 horas, servicio de
+              habitaciones y WiFi gratuita en todo el establecimiento, entre
+              otras comodidades. El establecimiento alberga piscina al aire
+              libre, centro de fitness, hammam y restaurante.
+              
+            </p>
+            <p>
+              El hotel ofrece 462 habitaciones y suites con vistas panorámicas a
+              Dubái y al Burj Khalifa. Los alojamientos disponen de hervidor de
+              agua. Todas las habitaciones del Rose Rayhaan Rotana Dubai están
+              equipadas con baño privado con bañera.
+            </p>
+            <p>
+              El Rose Rayhaan by Rotana alberga 3 sitios para comer, entre ellos
+              el restaurante Petals. Tiene capacidad para 160 personas y ofrece
+              comida durante todo el día para el desayuno, el almuerzo y la
+              cena.
+            </p>
+            <p>
+              La zona de conferencias, ubicada en 2 plantas, cuenta con 7 salas
+              de reuniones, todas equipadas con las últimas instalaciones
+              audiovisuales, conexiones sin cable y opciones. La zona de ocio
+              del hotel, el Bodylines Fitness and Wellness Club, ofrece un
+              gimnasio totalmente equipado, piscina exterior climatizada para
+              adultos y niños en la azotea, salón de belleza, salas de
+              tratamiento para masajes y cuidado de la piel, sauna, sala de
+              vapor y bañera de hidromasaje.
+            </p>
+            <p>
+              El hotel está cerca del centro comercial Dubai Mall y a 15 minutos
+              en coche del aeropuerto internacional de Dubái.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <footer>
+      <div class="social-media">
+        <span>
+          <a href="#"><i class="icon fab fa-2x fa-facebook-square"></i></a>
+        </span>
+        <span>
+          <a href="#"><i class="icon fab fa-2x fa-youtube"></i></a>
+        </span>
+        <span>
+          <a href="#"><i class="icon fab fa-2x fa-twitter"></i></a>
+        </span>
+        <span>
+          <a href="#"><i class="icon fab fa-2x fa-pinterest"></i></a>
+        </span>
+        <span>
+          <a href="#"><i class="icon fab fa-2x fa-instagram"></i></a>
+        </span>
+      </div>
+      <div>
+        <ul class="nav-footer">
+          <li>fotos</li>
+          <li>reviews</li>
+          <li>ubicacion</li>
+          <li>caracteristicas</li>
+          <li>contáctanos</li>
+          <li><a href="https://rotana.com">by Rotana</a></li>
+        </ul>
+      </div>
+
+
+      <div class="logo-footer">
+        <a href="index.html">
+          <img src="img/svg/logo-ryhaan_dubai.svg" alt="Logo Rose Ryhaan Dubai" height="35" />
+        </a>
+        <a href="https://rotana.com">
+          <img src="img/svg/logo-rotana.svg" alt="logo Rotana" height="35" />
+        </a>
+      </div>
+
+      <div>
+        <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
+      </div>
+    </footer>
+  </div>
+  </div>
+  </div>
+  </div>
+  <!-- <script src="js/slideshow.js"></script> -->
+  <script src="js/sidebar.js"></script>
+  <script>
+    function seleccionar(tr, value) {
+      this.chk1.click();
+    }
+  </script>
+
+</body>
+
 </html>
