--- a/users.html
+++ b/users.html
@@ -354,20 +354,20 @@
 
 
     <!-- SECCION PRINCIPAL -->
-    <div id="main">
+    <d iv id="main">
       <div class="base-main">
         <!-- AREA PRINCIPAL -->
         <div class="dataUser">
           <h2>Datos de Usuario</h2>
           <form action="#" class="inputs_dataUser">
             <label class="texto" for="cedula">Cédula</label>
-            <input type="email" name="cedula" id="cedula">
+            <input type="text" name="cedula" id="cedula">
             <br>
             <label class="texto" for="nombre">Nombre</label>
-            <input type="email" name="nombre" id="nombre">
+            <input type="text" name="nombre" id="nombre">
             <br>
             <label class="texto" for="apellido">Apellido</label>
-            <input type="email" name="apellido" id="apellido">
+            <input type="text" name="apellido" id="apellido">
             <br>
             <label for="fechaNacimiento">Fecha de Nacimiento</label>
             <input type="date" name="fechaNacimiento" id="fechaNacimiento">
@@ -483,7 +483,7 @@
           <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
         </div>
       </footer>
-    </div>
+    </d>
   </div>
   </div>
   <!-- <script src="js/slideshow.js"></script> -->
